codepkg/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Currency_of_studing__c</fullName>
        <label>Currency of studing</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>The group, in which the student studies.</description>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pulpit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pulpit</label>
        <referenceTo>Pulpit__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <label>Scholarship</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speciality</label>
        <referenceTo>Speciality__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniverDepartment__c</fullName>
        <label>UniverDepartment</label>
        <referenceTo>UnuverDepartment__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Budget</fullName>
        <active>true</active>
        <label>Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>Paid</fullName>
        <active>true</active>
        <label>Paid</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>